[gd_scene load_steps=2 format=3 uid="uid://bh35t6rubdnao"]

[ext_resource type="Script" uid="uid://bi77dylk0wa8c" path="res://Scripts/light_source.gd" id="1_5p8w7"]

[node name="LightSource" type="Area2D"]
collision_layer = 0
collision_mask = 12
script = ExtResource("1_5p8w7")

[node name="RayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(10000, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
